--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:white;
+    background-color:wheat;
 }
 
 
@@ -19,12 +19,15 @@ body {
 	ul#horizontal-list li {
         display: inline;
         padding: 7em;
+        border: 3px solid blue;
+        padding: 5px;
         
     }
     
     .layout {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 0.5fr 1fr ;
+        
         
     }
 
@@ -42,4 +45,130 @@ body {
         padding: 10em;
        
     }
+
+    .hotelone {
+        background-image: url('../img/1.JPG');
+        background-size: contain;
+        background-repeat: no-repeat;
+        height:246px;
+        width: 329px;
+        border-radius: 7%;
+        background-color: white;
+        width: 800px;
+        }
+        .hoteltwo {
+            background-image: url('../img/2.JPG');
+            background-size: contain;
+            background-repeat: no-repeat;
+            height: 246px;
+            width: 329px;
+            border-radius: 7%;
+            background-color: white;
+            width: 800px;
+        }
+        .hotelthree {
+            background-image: url('../img/3.JPG');
+            background-size: contain;
+            background-repeat: no-repeat;
+            height: 246px;
+            width: 329px;
+            border-radius: 7%;
+            background-color: white;
+            width: 800px;
+        }
+        .hotelfour {
+            background-image: url('../img/4.JPG');
+            background-size: contain;
+            background-repeat: no-repeat;
+            height: 246px;
+            width: 329px;
+            border-radius: 7%;
+            background-color: white;
+            width: 800px;
+        }
+        .hotelfive {
+            background-image: url('../img/5.JPG');
+            background-size: contain;
+            background-repeat: no-repeat;
+            height:246px;
+            width: 329px;
+            border-radius: 7%;
+            background-color: white;
+            width: 800px;
+        }
+        .hotelsix {
+            background-image: url('../img/6.JPG');
+            background-size: contain;
+            background-repeat: no-repeat;
+            height: 246px;
+            width: 329px;
+            border-radius: 7%;
+            background-color: white;
+            width: 800px;
+        }
+        .hotelseven {
+            background-image: url('../img/7.JPG');
+            background-size: contain;
+            background-repeat: no-repeat;
+            height: 246px;
+            width: 329px;
+            border-radius: 7%;
+            background-color: white;
+            width: 800px;
+        }
+        .hoteleight {
+            background-image: url('../img/8.JPG');
+            background-size: contain;
+            background-repeat: no-repeat;
+            height: 246px;
+            width: 329px;
+            border-radius: 7%;
+            background-color: white;
+            width: 800px;
+        }
+        .hotelnine {
+            background-image: url('../img/9.JPG');
+            background-size: contain;
+            background-repeat: no-repeat;
+            height: 246px;
+            width: 329px;
+            border-radius: 7%;
+            background-color: white;
+            width: 800px;
+        }
+        .hotelten {
+            background-image: url('../img/10.JPG');
+            background-size: contain;
+            background-repeat: no-repeat;
+            height: 246px;
+            width: 329px;
+            
+            float: left;                    /*moves img left*/
+            border-radius: 7%;
+            background-color: white;
+            width: 800px;
+            
+        }
+ .hotelinfo {
+     text-align: center;
+     font-size: 25px;
     
+ }
+
+ .sorts {
+     background-color: white;
+     border-radius: 7%;
+     text-align: center;
+     font-size: 30px;
+     
+ }
+ ul {
+    list-style-type:none; /*no dots in lists */
+    }
+
+    .whitespots {
+        background-color: brown;
+        height: 260px;
+            width: 700px;
+
+    }
