--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,9 @@ body {
      border-radius: 7%;
      text-align: center;
      font-size: 30px;
+     width: 500px; /* white box in sorts */
+     
+     
      
  }
  ul {
