--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:wheat;
+    background-color: lightskyblue;
     font-family: sans-serif;
 }
 
@@ -12,8 +12,10 @@ body {
 
 .table {
 	display: table;   
-    margin: 4rem;
-    
+    margin: 0rem;
+    background-color: white;
+    width: 1890px;
+    text-align: center;
     
     
 }
@@ -47,8 +49,8 @@ body {
     }
 
     .whereto {
-        padding: 10em;
-        background-color: white;
+        /*padding: 10em;*/
+        /*background-color: white;*/
         border-radius: 7%;
         
        
@@ -169,6 +171,7 @@ body {
      text-align: center;
      font-size: 30px;
      width: 350px; /* white box in sorts */
+     margin: left;
     
      
      
@@ -187,8 +190,11 @@ body {
     }
     .infos {
         
-        text-align: center;
-        padding: 0rem;
+        /*text-align: center;
+        padding: 0rem;*/
+        position: relative;
+        left: 400px;
+        
         
     }
 
@@ -197,7 +203,7 @@ body {
     
     
     
-    @media screen and (mn-width:800px){
+   /* @media screen and (mn-width:800px){
         .card{
             flex: 45%;
             max-width: 45%
@@ -208,8 +214,18 @@ body {
             flex:18%;
             max-width:18%;
         }
-    }
+    }*/
 
     .foot {
         text-align: center;
+    }
+
+    .staf {
+        position: relative;
+        left: 200px;
+    }
+
+    .price {
+       
+        
     }
