--- a/css/style.css
+++ b/css/style.css
@@ -1,102 +1,74 @@
 body {
     background-color: lightskyblue;
     font-family: sans-serif;
-}
-
-
-.title {
-    text-align: center;
-}
+   } 
+   .title {
+     text-align: center;
+    }
    
-
-
-.table {
+   .table {
 	display: table;   
     margin: 0rem;
     background-color: white;
     width: 1890px;
     text-align: center;
-    
-    
-}
+    }
 
-
-	ul#horizontal-list li {
+    ul#horizontal-list li {
         display: inline;
         padding: 7em;
-        
         padding: 5px;
-       
-    }
+       }
     
     .layout {
         display: grid;
         grid-template-columns: 0.5fr 1fr ;
-        
-        
-        
-    }
+        }
 
     .content {
         background-color: aqua;
-       
-    }
-    .search {
+       }
+    
+       .search {
         background-color: rgb(100, 100, 185);
         text-align: center;
-       
-      
-    }
+       }
 
     .whereto {
-        /*padding: 10em;*/
-        /*background-color: white;*/
         border-radius: 7%;
-        
-       
-    }
+        }
 
     .hotelone {
         background-image: url('../img/1.JPG');
                }
-        .hoteltwo {
+    .hoteltwo {
             background-image: url('../img/2.JPG');
-           
-        }
-        .hotelthree {
+           }
+    .hotelthree {
             background-image: url('../img/3.JPG');
-           
-        }
-        .hotelfour {
+            }
+    .hotelfour {
             background-image: url('../img/4.JPG');
-           
-        }
-        .hotelfive {
+           }
+    .hotelfive {
             background-image: url('../img/5.JPG');
-           
-        }
-        .hotelsix {
+           }
+    .hotelsix {
             background-image: url('../img/6.JPG');
-          
-        }
-        .hotelseven {
+          }
+    .hotelseven {
             background-image: url('../img/7.JPG');
-           
-        }
-        .hoteleight {
+           }
+    .hoteleight {
             background-image: url('../img/8.JPG');
-           
-        }
-        .hotelnine {
+           }
+    .hotelnine {
             background-image: url('../img/9.JPG');
-           
-        }
-        .hotelten {
+           }
+    .hotelten {
             background-image: url('../img/10.JPG');
-            
-           
-        }
-        .design {
+            }
+    .design {
             background-size: contain;
             background-repeat: no-repeat;
             height:246px;
@@ -105,25 +77,15 @@ body {
             background-color: white;
             width: 800px;
         }
- /*.hotelinfo {
-     text-align: center;
-     font-size: 25px;
-    
- }*/
-
- .sorts {
-     background-color: white;
-     border-radius: 7%;
-     text-align: center;
-     font-size: 30px;
-     width: 350px; /* white box in sorts */
-     margin: left;
-    
-     
-     
-     
-     
- }
+    .sorts {
+       background-color: white;
+       border-radius: 7%;
+       text-align: center;
+       font-size: 20px;
+       width: 350px; /* white box in sorts */
+       margin: left;
+        
+       }
  ul {
     list-style-type:none; /*no dots in lists */
     }
@@ -132,17 +94,14 @@ body {
         background-color: brown;
         height: 260px;
             width: 700px;
-
-    }
+       }
     .infos {
         
         /*text-align: center;
         padding: 0rem;*/
         position: relative;
         left: 400px;
-        
-        
-    }
+        }
 
     /*PHONE LAYOUT*/
     
@@ -172,6 +131,30 @@ body {
     }
 
     .price {
-       
-        
+        background-color: aqua;
+        border-radius: 40%;
+        width: 100px;
+       }
+    .thick {
+        font-weight: bold;
+      }
+    .rev {
+        font-size:12px;
+        color: lightslategrey;
     }
+    .more {
+         position: relative;
+         left: 860px;
+        }
+        .button {
+            background-color: rgb(58, 54, 250);
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+          }
