--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,12 @@ body {
     background-color: lightskyblue;
     font-family: sans-serif;
    } 
+
    .title {
-     text-align: center;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 250px;      
     }
    
    .table {
@@ -157,4 +161,5 @@ body {
             font-size: 16px;
             margin: 4px 2px;
             cursor: pointer;
-          }
+          }          
+          
